--- a/contact.html
+++ b/contact.html
@@ -5,4 +5,4 @@ title: Contact
 ---
 ## Contact
 
-Drop me an email if you are interested in me coding for you or saving your neighborhood!
+Envíeme un correo electrónico si está interesado en que programe para usted
