--- a/contact.html
+++ b/contact.html
@@ -5,4 +5,4 @@ title: Contact
 ---
 ## Contact
 
-Envíeme un correo electrónico si está interesado en que programe para usted
+I'm currently open to new job opportunities, if you want to contact me you can do it through my Networks or send me an E-mail to the following link.
