--- a/experience-and-skills/index.html
+++ b/experience-and-skills/index.html
@@ -1,7 +1,7 @@
 ---
-layout: blog
+layout: experience-and-skills
 section-type: blog
-title: Blog
+title: experience-and-skills
 sitemap:
   priority: 1.0
 ---
